infrastructure/base/resources/capacitor/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-proxy
  hostnames:
    - capacitor.docker.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
